--- a/wp-content/themes/sheabel-theme/css/modules/footer.css
+++ b/wp-content/themes/sheabel-theme/css/modules/footer.css
@@ -1,4 +1,4 @@
-/* footer */
+/* Footer */
 .uppercase {
     text-transform: uppercase;
 }
@@ -7,33 +7,37 @@ footer{
     background: $secondaryColor;
     padding: 70px 0;
     color: $white;
-}
-footer .footer-left-side {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+
+    .footer-left-side {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .footer-address {
+            margin: auto;
+            width: 250px;
+            text-transform: uppercase;
+        }
+    }
+    ul {
+       &.footer {
+           li {
+            font-size: 18px;
+            line-height: 200%;
+                &.current-menu-item {
+                    a {
+                        color: $white;
+                    }
+                }
+                a {
+                    color:$red;
+                    text-decoration: none; 
+                    &:hover {
+                        color:$white;
+                    }
+                }
+           }
+       }
+    }
 }
 
-footer .footer-left-side .footer-address {
-    margin: auto;
-    width: 250px;
-    text-transform: uppercase;
-}
-
-footer ul.footer li {
-    font-size: 18px;
-    line-height: 200%;
-}
-
-footer ul.footer li.current-menu-item a {
-    color: $white;
-}
-
-footer ul.footer li a {
-    color:$red;
-    text-decoration: none;
-}
-
-footer ul.footer li a:hover{
-    color:$white;
-}
