--- a/wp-content/themes/sheabel-theme/css/template.css
+++ b/wp-content/themes/sheabel-theme/css/template.css
@@ -1,6 +1,7 @@
 @import "base/colors.css";
 @import "base/global.css";
 
+@import "modules/accordion.css";
 @import "modules/acf_map.css";
 @import "modules/blue_box.css";
 @import "modules/columns.css";
